# ReLax

./: .gitignore  CLAUDE.md  PLAN.md  base_trainer_plan.md  bench_requests.py  chat.py  chat_interface_plan.md  compare_arrays.py  compare_logits.py  generate.py  generate_torch.py  grpo_trainer_plan.md  hf_reference.py  inference.py  inference_gemma.py  jit_test_plan.md  load_utils.py  mem_script.py  optimization_plan.md  plot_rope_scaling.py  plot_rope_scaling_jax.py  prompt_sender.py  pyproject.toml  qwen_inference.py  rope_explanation.md  sampling.py  script.sh  server.py  server_config.json  sft_trainer_plan.md  tokenizer_utils.py  trainer_plan.md
config/: chat_config.yaml
docs/: references.txt
examples/: async_inference.py  example_prompts.json  train_grpo.py  train_gsm8k.py
experiments/: chat.ipynb  compare_outputs.ipynb  config.json  flax_param_test.py  generate_torch.ipynb  generate_torch.py  jax_comparison.py  jax_run.ipynb  layer_exp.ipynb  load.ipynb  model_exp.ipynb  notebook.ipynb  orchestrator.py  pallas_exp.ipynb  params.txt  rope.ipynb  test_attention.ipynb  test_feedforward.ipynb  test_gpu.py  test_sharding.ipynb  tokenizer_exp.ipynb  torch_comparison.py  torch_llama.py  torch_run.ipynb  transformer_exp.ipynb
models/: config.py  engine.py  generate.py  kvcache.py  llama.py  modules.py  sync_server.py
scripts/: convert_gemma_to_orbax.py  convert_llama_to_orbax.py  convert_qwen_to_orbax.py  convert_to_orbax.py  factorio_env.py  factorio_tasks.py  load_sharded.py  load_v4_32.py  orbax_load.py  save_single_tpu.py  test_tokenizer.py  train_factorio.py  train_gsm8k.py
tests/: compare_outputs.py  generate_jax_output.py  generate_torch_output.py  simple_test.py  test_gqa_benchmark.py  test_jax_forward.py  test_jit_ops.py  test_kvcache.py  test_llama_tokenizer.py  test_model.py  test_model_forward.py  test_ops.py  test_qwen_model.py  test_qwen_ops.py  test_tokenizer_utils.py  test_torch_forward.py  torch_ops.py
trainers/: README.md  __init__.py  grpo_trainer.py  sft_trainer.py  trainer.py
utils/: cache_protocol.py  gemma_ops.py  (+14 more)
(+11 files in other folders)
