[project]
name = "ReLax"
version = "0.1.0"
dependencies = [
  "tiktoken",
  "jax",
  "flax",
  "numpy",
  "safetensors"
  "huggingface"
  "datasets"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipykernel",
  "torch",
  "chex",
  "huggingface_hub",
  "fire",
  "blobfile",
  "black"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.pytest.ini_options]
pythonpath = [
  "."
] 
