[project]
name = "ReLax"
version = "0.1.0"
dependencies = [
  "tiktoken",
  "jax",
  "flax",
  "numpy",
  "safetensors",
  "huggingface",
  "datasets"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipykernel",
  "torch",
  "chex",
  "huggingface_hub",
  "fire",
  "blobfile",
  "black"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
py-modules = ["sampling"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pyrefly]
project_excludes = [
  "**/__pycache__",
  "**/.venv",
  "**/node_modules",
  "**/*.egg-info",
  "**/.git",
  "**/dist",
  "**/build",
  "**/.mypy_cache",
  "**/.pytest_cache",
]
