[project]
name = "ReLax"
version = "0.1.0"
dependencies = [
  "tiktoken",
  "jax",
  "flax",
  "numpy",
  "safetensors",
  "huggingface",
  "datasets",
  "wandb",
  "orbax-checkpoint",
  "factorio-learning-environment>=0.3.0",
  "gymnasium>=1.2.3",
  "fastapi",
  "uvicorn[standard]",
  "google-cloud-storage",
  "gcsfs",
  "ml-dtypes",
  "sentencepiece"
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ipykernel",
  "chex",
  "huggingface_hub",
  "fire",
  "blobfile",
  "black"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["*"]

[tool.setuptools]
py-modules = ["sampling", "inference"]

[tool.pytest.ini_options]
pythonpath = [
  "."
]

[tool.pyrefly]
project_excludes = [
  "**/__pycache__",
  "**/.venv",
  "**/node_modules",
  "**/*.egg-info",
  "**/.git",
  "**/dist",
  "**/build",
  "**/.mypy_cache",
  "**/.pytest_cache",
]
